# base_backend

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: django-ci.yml
deploy/docker/: Dockerfile  entrypoint.sh
deploy/nginx/: Docker  nginx.conf
src/: db.sqlite3
src/core/: settings.py
